	  they are away
	* Support for Buddy Comments for AIM buddies
	* Window icons are now set as buddy icons or status icons
	* Get User Info in MSN and Yahoo now return an error indicating that
	  the information doesn't exist if the profile is empty (parts by
	  Nathan Poznick)
	* Added startup notification support for window managers that support it.
	* Zephyr formatting fixes (Arun A Tharuvai)
	* Zephyr can connect to chats (Karsten Huneycutt)
	* SSL support can now be provided by third party plugins.
	* Multiple copies of gaim installed at different locations no
	  longer attempt to load the same, possibly incompatible plugins
	  (Robert McQueen)
	* Implemented another new Yahoo! authentication method
	* Massive core/UI splitting.
	* Re-write of Jabber protocol plugin
	* Conversation API changes.
	* Some plugins must be updated due to code variable changes, 
	  function name changes, and change of behavior for certain 
	  functions.
	* Chinese (Traditional) translation updated (Ambrose C. Li)

version 0.70 (09/28/2003):
	* Implemented Yahoo's new authentication method (Cerulean Studios)
	* Protocol plugins that have plugin dependencies now load correctly.
	* Perl installs where it's told to a bit more correctly.
	* Robert "Robot101" McQueen cleaned and core/UI split IM
	  image support.
	* Chinese (Traditional) translation updated (Ambrose C. Li)
	* Portuguese (Portugal) translation updated (Duarte Henriques)

version 0.69 (09/24/2003):
	* Added Contact (aka Person, aka Meta-Contact, aka Buddy Merging, etc)
	  support
	* Added MSN 6 smileys.
	* Added animated smiley support (Ka-Hing Cheung)
	* Added SSL support, compatible with GNUTLS and Mozilla NSS.
	* Added plugin IPC.
	* Added support for gettext 0.12.x.
	* Updated MSN support to the MSN Protocol version 9.
	* Jabber now supports SSL
	* Yahoo now shows people using the java chat client (Tim Ringenbach)
	* Yahoo chat and conference (Tim Ringenbach)
	* Yahoo ignore support (Jesse Farmer (farmerje))